List Menu Box on homepage, fix favicon, and fix spacing between screenshots and app names

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -58,6 +58,7 @@ section:not(:last-of-type) {
         display: grid;
         grid-column-gap: 10px;
         grid-template-columns: 60px 1fr;
+        padding-top: 1em;
 
         h3 {
           font-size: 1.5em;
